# FRIA_Tools

./: .gitignore  AGENTS.md  Keywords-Complete.md  ROADMAP.md  __init__.py  keywords.db
FRIA_ComfyUI/: README.md  __init__.py  pyproject.toml  terminal.py  update_manager.py
FRIA_ComfyUI/blobby_companion/: __init__.py  settings_api.py
FRIA_ComfyUI/blobby_companion/web/js/: blobby.js
FRIA_ComfyUI/nodes/: custom_nodes_manager.py  diagnostic_node.py  elements_node.py  enhance_node.py  ideogram4_node.py  ideogram_parse_node.py  ideogram_prep_node.py  model_manager.py  prep_node.py  terminal_node.py
backend/: app.py  auth.py  context.py  embeddings.py  exporter.py  extensions.py  parser.py  requirements.txt  storage.py
backend/routes/: admin.py  auth.py  blobby.py  enhance.py  export.py  files.py  filters.py  generate.py  helpers.py  ideogram.py  import_export.py  keywords.py  presets.py  search.py  styles.py  templates.py  workflows.py
frontend/: beta.html  index.html
frontend/css/: app.css
frontend/js/: app-admin.js  app-core.js  app-filters.js  app-keywords.js  app.js
web/js/: 00_fria_modal.js  00_fria_picker_config.js  blobby_companion.js  fria_diagnostic.js  fria_elements_widget.js  fria_enhance_widget.js  fria_ideogram4_widget.js  fria_ideogram_parse_widget.js  fria_ideogram_prep_widget.js  fria_menu.js  fria_picker_config.js  fria_prep_widget.js  fria_terminal_widget.js  fria_workflow_share.js
